# peeko

./: CMakeLists.txt  LICENSE  README.md  code.style.schemes.xml  customization.xml  debugger.xml  file.template.settings.xml  github_settings.xml  intentionSettings.xml  other.xml  project.default.xml  ui.lnf.xml  vcs.xml
_windows/: applicationLibraries.xml
codestyles/: Default.xml  Platinum Scheme.xml
colors/: _@user_Darcula.icls
fileTemplates/: ASM File.asm
fileTemplates/includes/: ASM File Header.asm  C File Header.h  C++ File Source.cpp
fileTemplates/internal/: C Header File.h  C++ Class Header.h
include/: ntos.h  pkoi.h  pkortl.h  proxy.h  ps.h  status.h  vm.h
keymaps/: Visual Studio copy.xml
src/: main.c  pkoi.c  pkortl.c  ps.c  vm.c
src/asm/: ntos.asm  proxy.asm
tools/: External Tools.xml
